Updating tooltip/popover styles and fixing focus and hover pseudo classes issue where foreground and background colors for button were the same, making the text not visible.

--- a/webapp/src/main/webapp/src/primeng-overrides.less
+++ b/webapp/src/main/webapp/src/primeng-overrides.less
@@ -407,6 +407,9 @@ span.notConfiguredTemplate {
     color: @blue;
   }
 }
+.download-ref-temp:focus.download-ref-temp:hover {
+  color: #fff;
+}
 .modal-dialog .alert {
   margin-bottom: 0;
 }
